force-app/main/default/objects/ccrz__E_AccountGroupPriceList__c/ccrz__E_AccountGroupPriceList__c.object-meta.xml
<CustomObject>
    <description>Represents a mapping of Account Group to Pricelist.  This objects ties the two together, enabling the assignment and entitlement/pricing functionality.</description>
    <label>CC Account Group Price List</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Acct Group Pricelist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Account Group Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>