force-app/main/default/objects/ccrz__E_AccountGroupPriceList__c/fields/ccrz__AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AccountGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required - The reference to the account group</description>
    <label>Account Group</label>
    <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
    <relationshipLabel>Account Group Price Lists</relationshipLabel>
    <relationshipName>E_AccountGroupPriceLists</relationshipName>
    <type>Lookup</type>
</CustomField>