force-app/main/default/objects/ccrz__E_AccountGroupPriceList__c/fields/ccrz__AccountGroupPriceListID__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AccountGroupPriceListID__c</fullName>
    <description>External reference id for this entry</description>
    <externalId>true</externalId>
    <label>Account Group Pricelist ID</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>