force-app/main/default/objects/ccrz__E_AccountGroupPriceList__c/fields/ccrz__Enable__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Enable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag determining whether or not this mapping record is active</description>
    <label>Enable</label>
    <type>Checkbox</type>
</CustomField>