force-app/main/default/objects/ccrz__E_AccountGroupPriceList__c/fields/ccrz__Pricelist__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Pricelist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required - The reference to the pricelist</description>
    <label>Pricelist</label>
    <referenceTo>ccrz__E_PriceList__c</referenceTo>
    <relationshipLabel>Account Group Price Lists</relationshipLabel>
    <relationshipName>E_AccountGroupPriceLists</relationshipName>
    <type>Lookup</type>
</CustomField>