force-app/main/default/objects/ccrz__E_AccountGroupPriceList__c/fields/EC_Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>EC_Price_List_Type__c</fullName>
    <label>Price List Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z1CP</fullName>
            </value>
            <value>
                <fullName>Z1GP</fullName>
            </value>
            <value>
                <fullName>Z1MP</fullName>
            </value>
            <value>
                <fullName>ZFCP</fullName>
            </value>
            <value>
                <fullName>ZF00</fullName>
            </value>
            <value>
                <fullName>Z1LS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>