force-app/main/default/objects/ccrz__E_AccountGroupPriceList__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__AccountGroup__c</columns>
    <columns>ccrz__Enable__c</columns>
    <columns>ccrz__Pricelist__c</columns>
    <columns>ccrz__Sequence__c</columns>
    <columns>ccrz__StartDate__c</columns>
    <columns>ccrz__EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>